change to make java8 compatible